Ensured high contrast score

--- a/static/css/custom_buttons.css
+++ b/static/css/custom_buttons.css
@@ -1,6 +1,6 @@
 .custom-btn-fuchsia {
-    background-color: #C23E6E;
-    border-color: #C23E6E;
+    background-color: #91113f;
+    border-color: #91113f;
 }
 
 .custom-btn-fuchsia:hover {
@@ -9,8 +9,8 @@
 }
 
 .custom-btn-purple {
-    background-color: #B95FEB;
-    border-color: #B95FEB;
+    background-color: #9937cf;
+    border-color: #9937cf;
 }
 
 .custom-btn-purple:hover {
