--- a/static/css/custom_cards.css
+++ b/static/css/custom_cards.css
@@ -36,7 +36,7 @@
 }
 
 .custom-card-header-fuchsia {
-    background-color: #C23E6E;
+    background-color: #91113f;
     color: #30343F !important;
 }
 
