--- a/static/css/custom_forms.css
+++ b/static/css/custom_forms.css
@@ -14,7 +14,7 @@
 }
 
 .form-label {
-    color: #C23E6E !important;
+    color: #91113f !important;
 }
 
 input, .custom-input {
