--- a/static/css/custom_tables.css
+++ b/static/css/custom_tables.css
@@ -3,7 +3,7 @@
 }
 
 .custom-col-name-fuchsia {
-    color: #C23E6E !important;
+    color: #91113f !important;
 }
 
 .custom-col-name-skyblue {
@@ -11,5 +11,5 @@
 }
 
 .custom-col-name-purple {
-    color: #B95FEB !important;
+    color: #9937cf !important;
 }
