--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,7 +47,7 @@ body {
 }
 
 .custom-text-fuchsia {
-    color: #C23E6E;
+    color: #91113f;
 }
 
 .form-group {
